[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Yuki Yamaura <ymruki@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Easy way to create playground of WASI applications for web"
homepage = "https://github.com/yamaura/wasui"
repository = "https://github.com/yamaura/wasui"

[workspace.metadata.release]
push = false
tag-name = "{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[workspace.metadata.docs.rs]
all-features = true

[workspace.dependencies]
js-sys = "0.3.77"
thiserror = "2"
wasm-bindgen-test = "0.3"
wasm-bridge = "0.4.0"
